--- a/Embrace Ecommerce.xcodeproj/xcshareddata/xcschemes/Embrace Ecommerce.xcscheme
+++ b/Embrace Ecommerce.xcodeproj/xcshareddata/xcschemes/Embrace Ecommerce.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5404630E2E7B366500021FF7"
+               BuildableName = "Embrace EcommerceUITests.xctest"
+               BlueprintName = "Embrace EcommerceUITests"
+               ReferencedContainer = "container:Embrace Ecommerce.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
