--- a/Embrace-Ecommerce-Info.plist
+++ b/Embrace-Ecommerce-Info.plist
@@ -6,18 +6,18 @@
 	<string>stripe</string>
 	<key>CFBundleURLSchemes</key>
 	<array>
-		<string>embrace-ecommerce</string>
+		<string>com.googleusercontent.apps.486537385178-t1ice7c4rqgdoqokeukjescgqltfkjvq</string>
 	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.YOUR_GOOGLE_CLIENT_ID</string>
+				<string>com.googleusercontent.apps.486537385178-t1ice7c4rqgdoqokeukjescgqltfkjvq</string>
 			</array>
 		</dict>
 	</array>
 	<key>GIDClientID</key>
-	<string>YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com</string>
+	<string>486537385178-t1ice7c4rqgdoqokeukjescgqltfkjvq.apps.googleusercontent.com</string>
 </dict>
 </plist>
