--- a/.github/workflows/ci-new.yml
+++ b/.github/workflows/ci-new.yml
@@ -79,7 +79,7 @@ jobs:
       run: |
         echo "📦 Resolving Swift Package dependencies..."
         xcodebuild -resolvePackageDependencies \
-          -scheme "Embrace Ecommerce" \
+          -scheme "${{ env.PROJECT_NAME }}" \
           -derivedDataPath ~/Library/Developer/Xcode/DerivedData || {
           echo "❌ ERROR: Failed to resolve Swift Package dependencies"
           exit 1
@@ -102,8 +102,8 @@ jobs:
       id: find_simulator
       run: |
         echo "🔍 Finding valid iPhone simulator..."
-        PROJECT_NAME="Embrace Ecommerce"
-        SCHEME="Embrace Ecommerce"
+        PROJECT_NAME="${{ env.PROJECT_NAME }}"
+        SCHEME="${{ env.PROJECT_NAME }}"
         SIMULATOR="iPhone 16 Pro"
 
         # Get valid destination from xcodebuild
@@ -133,17 +133,18 @@ jobs:
         # Extract device type and runtime from the base simulator
         echo "🔍 Extracting device type and runtime information..."
 
-        DEVICE_INFO=$(xcrun simctl list devices -j | python3 -c "
+        DEVICE_INFO=$(xcrun simctl list devices -j | python3 <<PYTHON_EOF
 import sys, json
 data = json.load(sys.stdin)
-target_udid = '$SIMULATOR_UDID'
-for runtime, devices in data['devices'].items():
+target_udid = "$SIMULATOR_UDID"
+for runtime, devices in data["devices"].items():
     for device in devices:
-        if device['udid'] == target_udid:
-            print(device['deviceTypeIdentifier'])
+        if device["udid"] == target_udid:
+            print(device["deviceTypeIdentifier"])
             print(runtime)
             sys.exit(0)
-")
+PYTHON_EOF
+)
 
         DEVICE_TYPE=$(echo "$DEVICE_INFO" | sed -n '1p')
         RUNTIME=$(echo "$DEVICE_INFO" | sed -n '2p')
@@ -224,8 +225,8 @@ for runtime, devices in data['devices'].items():
         echo ""
 
         xcodebuild build-for-testing \
-          -project "Embrace Ecommerce.xcodeproj" \
-          -scheme "Embrace Ecommerce" \
+          -project "${{ env.PROJECT_NAME }}.xcodeproj" \
+          -scheme "${{ env.PROJECT_NAME }}" \
           -destination "platform=iOS Simulator,id=$FIRST_CLONE" \
           -configuration Debug \
           -enableCodeCoverage NO \
@@ -247,8 +248,8 @@ for runtime, devices in data['devices'].items():
 
         CLONE_UDIDS="${{ steps.create_clones.outputs.clone_udids }}"
         NUM_CLONES="${{ steps.create_clones.outputs.num_clones }}"
-        PROJECT_NAME="Embrace Ecommerce"
-        SCHEME="Embrace Ecommerce"
+        PROJECT_NAME="${{ env.PROJECT_NAME }}"
+        SCHEME="${{ env.PROJECT_NAME }}"
         TEST_CLASS="Embrace_EcommerceUITests"
         TEST_METHOD="testFlow"
 
